# RealTimeVideoMedianFilter

./: CMakeLists.txt  README.md
src/: CLHelper.cpp  CLHelper.h  CMakeLists.txt  CommonHeader.h  Main.cpp  MedianFilterRealTime.cpp  OpenGLDisplay.cpp  OpenGLDisplay.h  OpenGLFilter.cpp  OpenGLFilter.h
